# neurotech-project

./: README.md  Sleep EEG.ipynb  dataset.md  pyproject.toml
output/: Sleep EEG.html
